Added a cd command.

--- a/Pipeline/pipeline.yaml
+++ b/Pipeline/pipeline.yaml
@@ -5,7 +5,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: $(System.DefaultWorkingDirectory)/Cake/run-build.sh
+- bash: |
+  cd $(System.DefaultWorkingDirectory)/Cake \
+  && ./run-build.sh
 - task: PublishCodeCoverageResults@1
   inputs:
     codeCoverageTool: 'cobertura'
